--- a/main_style.css
+++ b/main_style.css
@@ -35,7 +35,7 @@ z-position: -2;
 #container {
 border: white 4px solid;
 width: 900px;
-height: 900px;
+height: 95%;
 top: 0px;
 position: absolute;
 text-align: left;
@@ -57,15 +57,34 @@ float: left;
 }
 
 p.explain {
-	font-size: 10px;
+	font-size: 11px;
 	padding: 13px;
-	bottom: 40px;
+	bottom: 6%;
 	position: absolute;
 	width: 700px;
+	font-family:georgia;
 }
 
 p{
 font-size:12px;
-font-family: calibri;
+font-family: georgia;
 }
+
+img.portfolio {
+height: 75%;
+display: block;
+margin-left: auto;
+margin-right: auto;
+top: 10px;
+position: relative;
+}
+
+pre {
+font-size:12px;
+font-family: georgia;
+}
+
+
+
+
 
